# ofsted-ilacs-scrape-tool

./: .gitignore  CLAUDE.md  README.md  index.html  main.py  ofsted_csc_ilacs_overview.xlsx  ofsted_ilacs_scrape.py  pyproject.toml  sccm.yml  setup.sh
.claude/hooks/: session-start.sh
.github/workflows/: gh_refresh_gpage.yml  pr_check.yml
admin/: check_la_code_currency.py  sentiment_experiment.py  validate_scrape_output.py
import_data/la_lookup/: Provider_data_lookup.csv
