[project]
name = "ofsted-ilacs-scrape-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "gitpython>=3.1",
    "numpy>=1.26",
    "pandas>=2.2,<3.0",
    "pypdf2>=3.0",
    "requests>=2.31",
    "tabula-py>=2.9",
    "xlsxwriter>=3.1",
]
